# hcr_crowd_nav

./: CMakeLists.txt  README.md  package.xml
scripts/: env_interface.py  environment.py  liegroup.py  pinocchio_robot_system.py  robot.py  robot_system.py  rvo.py  util.py
scripts/a1_description/: CMakeLists.txt
scripts/a1_description/config/: control.yaml
scripts/a1_description/launch/: sim.launch
scripts/a1_description/xacro/: gazebo.xacro
scripts/urdf/: agent.urdf
